tests/compile-fail/integration__integration__timelines__duplicate_implicit.snap
---
source: tests/integration/timelines.rs
expression: stderr
---
warning: mixture of explicit and automatic timeline indices
  ┌─ <input>:2:10
  │
2 │ timeline 0 { ins_10(100); }
  │          ^ explicit index
3 │ timeline { ins_10(100); }
  │ -------- implicitly has index 0

error: duplicate timeline for index 0
  ┌─ <input>:3:1
  │
2 │ timeline 0 { ins_10(100); }
  │          - previously defined here
3 │ timeline { ins_10(100); }
  │ ^^^^^^^^ redefined here


